# InfDB

./: .cache.sqlite  .dockerignore  .env  .env.template  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONFIG.py  CONFIG.yaml  CONTRIBUTING.md  CREDITS.md  Dockerfile  Dockerfile.data_import  Dockerfile.loader  LICENSE  README.md  README.rst  Readme.md  SECURITY.md  building-generation.sql  compose-setup.yml  compose.yml  compose.yml.template  create-building-grid-map.sql  create-grid.sql  docker-compose.data_import.yaml  docker-compose.impexp.yaml  docker-compose.import.yaml  docker-compose.local.yaml  docker-compose.lod2-import.yaml  docker-compose.sunset.yaml  docker-compose.yaml  docker-compose.yml  germany-grid.sql  (+16 more)
.github/ISSUE_TEMPLATE/: security_vulnerability.yml
.github/workflows/: mkdcos.yml  mkdocs.yml  tests.yml
.gitlab/issue_templates/: Security_Vulnerability.md  Validating.md
api/: index.html
api/pyinfdb/: index.html
configs/: Readme.md  config-infdb-import.yml.template  config-infdb.yml  config-loader.yml  config-processor.yml  config-services.yml  config-sunpot.yml  config.yaml  config.yml  config_loader.yaml  config_services.yaml  confıg_loader.yaml
configs/.generated/: pg_service.conf
data_import/: README.md  config.json  open-data-config.json  requirements.data_import.txt
data_import/imp/: config.py  imp_basemap.py  imp_bkg.py  imp_census2022.py  imp_initial_tables.py  imp_lod2.py  imp_plz.py  utils.py
data_import/sunpot/: README.md  sunpotConfig.xml
data_loader/: imp_basemap.py  imp_bkg.py  imp_census2022.py  imp_lod2.py  imp_plz.py  requirements.data_loader.txt  startup.py  utils.py
development/: index.html
development/code-of-conduct/: index.html
development/documentation/: index.html
development/repository/: index.html
development/tips-and-tricks/: index.html
development/workflow/: index.html
docker/: .env  citydb.yaml  citydbv4.yaml  docker-compose.yaml  generate_compose.py  loader.yaml  pgadmin.yaml  timescaledb.yaml
dockers/: .env  Dockerfile-citydb  Readme.md  citydb-tool.yml  citydb.yaml  citydb.yml  citydbv4.yaml  docker-compose.sunset.yaml  docker-compose.yaml  docker-compose.yml  generate-compose.py  generate_compose.py  jupyter.yaml  jupyter.yml  loader.yaml  loader.yml  pgadmin.yaml  pgadmin.yml  timescaledb.yaml  timescaledb.yml
dockers/api/: Dockerfile  docker-compose.yml
dockers/loader/: .env  citydb-tool.yml  data-loader.yml  docker-compose.yml  generate-compose.py  jupyter.yml  loader.yml  pgadmin.yml  timescaledb.yml
dockers/processor/: docker-compose.yml
dockers/qgis_webclient/: docker-compose.yml
dockers/services/: .pgpass  citydb.yml  jupyter.yml  pgadmin.yml  servers.json  timescaledb.yml
dockers/setup/: compose.yml  docker-compose.yml  main.py
dockers/sunpot/: .env  Readme.md  docker-compose.yml  generate-env.py
docs/: .gitignore  HISTORY_PURGE_LOG.md  README.md  TOKEN_REVOCATION_CONFIRMATION.md  readme.md  requirements.txt
docs/architecture/: DATA_LOADER.md  README.md  SOLAR_POTENTIAL.md  SYSTEM_OVERVIEW.md  databases.md  index.md  services.md
docs/contributing/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE_PROCEDURE.md
docs/data_formats/: README.md
docs/development/: README.md  api_guide.md  database_schema.md  index.md  qgis_webclient.rst  setup.md  workflow.md
docs/examples/: README.md
docs/guidelines/: README.md  coding_guidelines.md  requirements.adoc
docs/input_data/: BuildingFunctionTypeAdV.xml
docs/mkdocs/: mkdocs.yml
docs/operations/: DEPLOYMENT.md  README.md
docs/source/: conf.py  index.rst
infdb/: index.html
infdb/architecture/: index.html
infdb/database/: index.html
infdb/services/: index.html
joss/: paper.bib  paper.md
linear-heat-density/: index.html
linear-heat-density/tools/: index.html
scripts/: infdb-by.sh  lizmap.sh
search/: search_index.json
services/3dcitydb/: compose.yml
services/api/: Dockerfile  README.md  api.yml  compose.yml  postgrest.yml  pygeoapi.yml
services/infdb-api/: README.md
services/infdb-db/: 020_init-3dcitydb.sh  Dockerfile  compose.yml
services/infdb-http/: Dockerfile  (+4 more)
services/infdb-import/: Dockerfile  Readme.md  compose.yml  main.py  pyproject.toml  run.sh
services/infdb-import/.devcontainer/: devcontainer.json  docker-compose.yml
services/infdb-import/sql/: bld.sql  bld_view.sql  changelog.sql  create_building_table.sql  sur.sql  sur_ids.sql  sur_table.sql
services/infdb-import/src/: basemap.py  bkg.py  census2022.py  gebaeude_neuburg.py  kwp_nrw.py  kwp_nrw_oberhausen.py  lod2.py  need.py  nrw_opencloud.py  opendata_bavaria.py  openmeteo.py  package.py  plz.py  tabula.py  utils.py  waermeatlas_hessen_bensheim.py  wetterdienst.py
src/: basemap.py  bkg.py  census2022.py  config.py  lod2.py  logger.py  main.py  plz.py  tabula.py  utils.py
src/infdb_package/: README.md  mkdocs.yml  pyproject.toml
src/infdb_package/documentation/api/: client.md  config.md  infdb.md  logger.md  utils.md
src/infdb_package/infdb/: client.py  infdb.py  logger.py
src/infdb_package/pyinfdb/: __init__.py  config.py
src/infdb_package/scripts/: README.md  export_site_to_md.py  gen_api_docs.py
tests/: README.md  conftest.py
tools/: compose.yml  fix-leak.test.ts  fix-leak.ts  index.html  tools.env  tools.py  tools.sh
tools/ro-heat/: Dockerfile  Readme.md  compose.yml  main.py  pyproject.toml  ro-heat.env
tools/ro-heat/.devcontainer/: devcontainer.json  docker-compose.yml
tools/ro-heat/configs/: config-ro-heat.yml
tools/ro-heat/sql/: 00_create_rc_temp_table.sql  01_calculate_r_values.sql  01_get_building_surface_data.sql  02_get_tabula_elements.sql  03_heat-demand-r.sql  04_debug_demand.sql  upsert_buildings_rc.sql  upsert_buildings_refurbished_status.sql  upsert_entise_summary.sql
tools/ro-heat/src/: basic_refurbishment.py  config.py  eureca_code.py  logger.py  refurbishment.py  sql.py  tabula_handling.py  timedata.py  utils.py
usage/: index.html
(+591 files in other folders)
