[project]
name = "infdb-workspace"
version = "4.0.0"
description = "Infrastructure and Energy Database"
authors = [
  { name = "Patrick Buchenberg", email = "patrick.buchenberg@tum.de" }
]
requires-python = "==3.12.*"

dependencies = [
    "infdb",
    "geopandas",
]

[tool.uv.sources]
infdb = { path = "src/infdb_package", editable = true }

[dependency-groups]
dev = ["flake8==7.1.1"]
lint = [
  "mypy>=1.19.1",
  "pandas-stubs>=2.3.3",
  "ruff>=0.14.9",
  "types-psycopg2>=2.9.21",
  "types-pyyaml>=6.0.12",
  "types-shapely>=2.1.0",
]
precommit-hook = [
  "pre-commit>=4.5.1",
]
security-lint = [
  "bandit>=1.9.2",
  "safety>=3.7.0",
]
docs = [
"mkdocs-material",
"mkdocs-material[imaging]",
"mkdocs-glightbox",
"mike",
# Plugins
"mkdocs-awesome-pages-plugin",
"watchdog",
"mkdocstrings-python",
]
test =[
  {include-group = "precommit-hook"},
  {include-group = "lint"},
  {include-group = "security-lint"},
  {include-group = "docs"},
]


#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[tool.ruff]
lint.select = ["E", "F", "B", "I"]
lint.ignore = []
line-length = 120
target-version = "py312"

[tool.mypy]
mypy_path = ["src/infdb_package"]