[project]
name = "ro-heat"
version = "1"
requires-python = "==3.12.*"
dependencies = [
    "pandas",
    "sqlalchemy",
    "PyYAML",
    "psycopg2-binary",
    "entise",
    "infdb",
]

[tool.uv.sources]
infdb = { path = "/workspaces/infdb_package", editable = true }
entise = { git = "https://github.com/tum-ens/EnTiSe", branch = "develop" }
